fixed dependency issue